Remove font-awesome gem. Add FA fonts and sass. Finish footer icons.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,7 @@
 ---
 ---
 @import 'theme';
+@import 'vendors';
 @import url('https://fonts.googleapis.com/css?family=Hind:400,600');
 @import 'variables';
 @import 'typography';
