--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,19 +22,41 @@
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
+
           {% if site.github_username %}
           <li>
-            {% include icon-github.html username=site.github_username %}
+            <a href="https://github.com/apmiller108" class="link github">
+              <span><i class="fa fa-github" aria-hidden="true"></i></span>
+              {{ site.github_username }}
+            </a>
+          </li>
+          {% endif %}
+
+          {% if site.linkedin %}
+          <li>
+            <a href="{{ site.linkedin }}" class="link linkedin">
+              <span><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
+              linkedin
+            </a>
           </li>
           {% endif %}
 
           {% if site.twitter_username %}
           <li>
-            {% include icon-twitter.html username=site.twitter_username %}
+            <a href="https://twitter.com/{{ site.twitter_username }}" class="link linkedin">
+              <span><i class="fa fa-twitter" aria-hidden="true"></i></span>
+              {{ site.twitter_username }}
+            </a>
           </li>
           {% endif %}
+
           {% if site.website %}
-          <li><a href="{{ site.website }}">alex-miller.co</a></li>
+          <li>
+            <a href="{{ site.website }}">
+              <span><i class="fa fa-smile-o" aria-hidden="true"></i></span>
+              alex-miller.co
+            </a>
+          </li>
           {% endif %}
         </ul>
       </div>
