Add global styles to override the theme

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -4,3 +4,4 @@
 @import url('https://fonts.googleapis.com/css?family=Hind:400,600');
 @import 'variables';
 @import 'typography';
+@import 'global';
