--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,9 +32,18 @@
           </li>
           {% endif %}
 
+          {% if site.til %}
+          <li>
+            <a href="{{ site.til}}">
+              <span><i class="fa fa-lightbulb-o" aria-hidden="true"></i></span>
+              til
+            </a>
+          </li>
+          {% endif %}
+
           {% if site.linkedin %}
           <li>
-            <a href="{{ site.linkedin }}" class="link linkedin">
+            <a href="{{ site.linkedin }}">
               <span><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
               linkedin
             </a>
@@ -43,7 +52,7 @@
 
           {% if site.twitter_username %}
           <li>
-            <a href="https://twitter.com/{{ site.twitter_username }}" class="link linkedin">
+            <a href="https://twitter.com/{{ site.twitter_username }}">
               <span><i class="fa fa-twitter" aria-hidden="true"></i></span>
               {{ site.twitter_username }}
             </a>
